--- a/chat_server/src/main/resources/application.properties
+++ b/chat_server/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=11451
 debug=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/capstone?serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=wyz123456
+spring.datasource.initialSize:5
