--- a/chat_server/pom.xml
+++ b/chat_server/pom.xml
@@ -58,7 +58,12 @@
 			<version>2.14.2</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>8.0.1</version>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
