--- a/chat_server/pom.xml
+++ b/chat_server/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
-			<version>2.2.2</version>
+			<version>2.1.4</version>
 		</dependency>
 
 		<dependency>
@@ -64,6 +64,12 @@
 			<version>8.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
