--- a/chat_server/src/main/resources/application.properties
+++ b/chat_server/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/capstone?serverTimezone=UTC&us
 spring.datasource.username=root
 spring.datasource.password=wyz123456
 spring.datasource.initialSize:5
+mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.type-aliases-package=au.edu.sydney.comp5703.cs30.chat.entity
