--- a/chat_webclient/package.json
+++ b/chat_webclient/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +14,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-input-emoji": "^5.0.2",
-    "react-chat-elements": "^12.0.8",
     "react-elements": "^1.3.1",
+    "react-input-emoji": "^5.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
