--- a/chat_server/src/main/resources/application.properties
+++ b/chat_server/src/main/resources/application.properties
@@ -10,3 +10,15 @@ spring.datasource.password=comp5703
 spring.datasource.initialSize:5
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=au.edu.sydney.comp5703.cs30.chat.entity
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=50MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
+## File Storage Properties
+# All files uploaded through the REST API will be stored in this directory
+file.upload-dir=/Users/wangyuzhe/Documents/GitHub/COMP5703-CS30-2/chat_server/src/main/resources/file
