--- a/chat_server/pom.xml
+++ b/chat_server/pom.xml
@@ -71,7 +71,10 @@
 			<artifactId>bcprov-jdk15on</artifactId>
 			<version>1.70</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 
 
 		<dependency>
