--- a/chat_webclient/package.json
+++ b/chat_webclient/package.json
@@ -16,11 +16,13 @@
     "bootstrap": "^5.2.3",
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.4.9",
+    "js-md5": "^0.7.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-elements": "^1.3.1",
     "react-input-emoji": "^5.0.2",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
