--- a/chat_server/pom.xml
+++ b/chat_server/pom.xml
@@ -34,6 +34,10 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>3.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 
 <!--		<dependency>-->
 <!--			<groupId>org.mybatis.spring.boot</groupId>-->
