--- a/chat_server/src/main/resources/application.properties
+++ b/chat_server/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=11451
-debug=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 # this is required so that current_timestamp returns correct value in UTC, or you can set the mysql server timezone to UTC
@@ -10,6 +9,8 @@ spring.datasource.password=comp5703
 spring.datasource.initialSize:5
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.type-aliases-package=au.edu.sydney.comp5703.cs30.chat.entity
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
