try to fix and finalize the project

--- a/chat_server/src/main/resources/application.properties
+++ b/chat_server/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=11451
+debug=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 # this is required so that current_timestamp returns correct value in UTC, or you can set the mysql server timezone to UTC
